--- a/Project_st1/Web page.html
+++ b/Project_st1/Web page.html
@@ -8,7 +8,7 @@
     <style>
         nav{
             background-color: silver;
-            padding: 2%;
+            padding:2%;
             text-align: left;
             font-size: 1cm;
         }
@@ -19,14 +19,21 @@
         color:#6033F;
         text-decoration:none;
         }
+		.di{
+		opacity:0.7;
+		border: 2px solid red;
+        border-radius: 25px;
+		}
+		
         </style>
 </head>
 <body style="text-align: center;">
-    <h1>Group 11</h1>
+<div class="di">
+    <h1>Group 11</h1></div>
     
     <div style="margin: 0% 5% 0% 5%;">
         <nav>
-            <li class="b" style="margin-left:20%;"><a href="Home.html" class="c">Home</a></li>
+           <li class="b" style="margin-left:20%;"><a href="Home.html" class="c">Home</a></li>
             <li class="b" style="margin-left:10%;"><a href="News.html" class="c">News</a></li>
             <li class="b" style="margin-left:10%;"><a href="Contact.html" class="c">Contact</a></li>
             <li class="b" style="margin-left:10%;"><a href="About.html" class="c">About</a></li>
