--- a/Project_st2/Index.html
+++ b/Project_st2/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Page</title>
     <style>
         #n1{
             width: 70%;
@@ -30,7 +30,7 @@
 </head>
 <body style="background-color:silver;">
     <div style="text-align: center;">
-        <div style="margin:5%">
+        <div style="margin:10%">
             <h3>Enter a number to create a Square </h3>
             <input type="number" name="n1" id="n1" required><br>
             <div id="button" onclick="myfun()"><p>Create a Square </p></div>
